# Theorafile

./: CMakeLists.txt
.github/workflows/: android.yml  ci.yml  ios.yml  main.yml  uwp.yml
cmake/: theorafile.pc.in
visualc-winrt/: libtheorafile.vcxproj
